# phynai

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY_CONCERNS.md  docker-compose.yml  main.py  pyproject.toml  setup.sh
docs/: admin-deployment.md
scripts/: install.sh  restart-stack.sh  setup-discord.sh  setup-telegram.sh
src/phynai/: __init__.py  admin.py  auth.py  cli_main.py  setup.py
src/phynai/agent/: __init__.py  client.py  context.py  cost.py  loop.py  session.py
src/phynai/contracts/: __init__.py  agent.py  events.py  interfaces.py  middleware.py  policy.py  runtime.py  tools.py  work.py
src/phynai/interfaces/: __init__.py  cli.py  gateway.py
src/phynai/multi/: __init__.py  memory.py  orchestrator.py  pool.py  queue.py  scheduler.py  task.py  team.py
src/phynai/prompts/: __init__.py  system.py
src/phynai/runtime/: __init__.py  events.py  middleware.py  policy.py  registry.py  tool_runtime.py
src/phynai/skills/: __init__.py  builder.py  loader.py  models.py  registry.py
tests/: test_cli_main.py  test_integration.py  test_tools.py
tests/agent/: test_context.py  test_cost.py  test_loop.py  test_session.py
tests/contracts/: test_events.py  test_middleware.py  test_policy.py  test_protocols.py  test_tools.py  test_work.py
tests/interfaces/: test_api.py  test_cli.py  test_gateway.py
tests/orchestrator/: test_graph.py  test_queue.py  test_scheduler.py  test_sources.py
tests/runtime/: test_events.py  test_middleware.py  test_policy.py  test_registry.py  test_tool_runtime.py
(+12 files in other folders)
