[project]
name = "phynai-agent"
version = "0.1.0"
description = "PhynAI Agent — operator-grade AI agent runtime with optional orchestration"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
slack = ["slack-bolt>=1.18"]
keyring = ["keyring>=25.0"]
dev = ["pytest", "pytest-asyncio", "ruff"]
# ms365 uses httpx only — no extra deps required

[project.scripts]
phynai = "phynai.cli_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phynai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["phynai"]
